--- a/app/scss/_hp-soupiska.scss
+++ b/app/scss/_hp-soupiska.scss
@@ -1,6 +1,36 @@
 .hp-soupiska{
    display: flex;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.100313);
+   &__tabs{
+      color: #fff;
+   }
+   &__tab{
+      display: flex;
+      .tab{
+         max-width: 50%;
+         flex: 0 50%;
+         text-align: center;
+         padding: 17px 0;
+         cursor: pointer;
+         &.active{
+            background-color: $dark-blue;
+         }
+      }
+   }
+   .tab__content{
+      display: none;
+      padding-bottom: 24px;
+      .tabulka__teams{
+         padding: 0 10px;
+      }
+      &.tab-active{
+         display: block;
+      }
+      .hp-soupiska__link{
+         color: #fff;
+      }
+   }
+   
    &__col{
       max-width: 460px;
       width: 100%;
