--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -135,6 +135,7 @@ p{
          border-top: 1px solid rgba(203, 212, 217, 0.5);
          padding: 14px 0 15px;
          .active{
+            color: $orange;
             &::before{
                background-image: url('../images/svg/arrow-right-hover.svg');
             }
