--- a/app/scss/_topstory.scss
+++ b/app/scss/_topstory.scss
@@ -363,6 +363,10 @@
    }
 }
 @media(max-width: 770px){
+   .topstory .topstory_content.on{
+      margin-bottom: 24px;
+      margin-left: 0px;
+   }
    .article_list__text{
       padding: 0;
    }
@@ -409,56 +413,50 @@
    }
 }
 @media(max-width:540px){
-   .topstory__content>.container{
-      padding: 0;
+   .article_list__image a img{
+      margin-top: 0;
    }
-   .article_list__text{
-      padding: 16px 0;
+   .topstory{
+      height: 270px;
+      min-height: 1px;
    }
-   .topstory .topstory_content.on{
-      display: flex;
-      flex-direction: column-reverse;
-   }
-   .topstory__content{
-      position: relative;
-      padding-top: 16px;
-      .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto{
-         padding: 0;
-      }
-   }
-   .topstory__article-info{
-      color: #9fa4ad;
-      font-size: 0.875rem;
-      text-shadow: none;
-      margin-top: 8px;
-      span{
-         color: #fff;
-      }
-   }
-   .topstory__content h1{
-      text-shadow: none;
-      margin: 0;
-   }
-   
    .topstory__content h1 a{
-      color: #2C2C2C;
-      font-size: 1.1rem;
+      font-size: 1.25rem;
+      line-height: 110%;
    }
-   .topstory__bcg{
-      display: none;
+   .topstory__content>.container{
+      padding: 0 0 10px 0;
    }
-   .col-sm-2{
-      flex: 100%;
-      max-width: 100%;
+   .article_list__item{
+      .row{
+         flex-wrap: none;
+      }
+      .col-sm-2{
+         width: 78px;
+         height: 70px;
+         max-width: 100%;
+      }
+      .article_list__image{
+         width: 100%;
+         height: 100%;
+         a{
+            width: 100%;
+            height: 100%;
+            img{
+               object-fit: cover;
+            }
+         }
+      }
    }
+
    
 }
 
     @media (max-width:380px){
-       .topstory__articles-mobile .article_list__item>.row>div{
-          -webkit-box-flex:0;-ms-flex:0 0 100%;
-          flex:0 0 100%;
-          max-width:100%;
-       }
+      //  .topstory__articles-mobile .article_list__item>.row>div{
+      //     -webkit-box-flex:0;-ms-flex:0 0 100%;
+      //     flex:0 0 100%;
+      //     max-width:100%;
+      //  }
     }
    
