--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -178,3 +178,121 @@ table{
       }
    }
 }
+
+.pagination {
+   margin-top: 30px;
+   display: flex;
+   width: 100%;
+ }
+ .pagination__list {
+   li {
+     display: inline-block;
+     margin-right: 6px;
+     margin-bottom: 6px;
+   }
+   a,
+   span {
+     width: 38px;
+     height: 33px;
+     display: flex;
+     border-radius: 4px;
+     justify-content: center;
+     align-items: center;
+     color: $blue;
+     transition: all 0.6s;
+     box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+     &.active {
+       background-color: $blue;
+       color: #fff;
+       &:hover {
+         background-color: $blue;
+         color: #fff;
+       }
+     }
+     &:hover {
+       background-color: $orange;
+       color: #fff;
+     }
+   }
+ }
+ .pagination-next {
+   margin-left: 3px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   max-width: 38px;
+   height: 33px;
+   box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+   transition: all 0.5s;
+   border-radius: 4px;
+   svg g {
+      fill: $blue;
+     transition: all 0.1s;
+   }
+   &:hover {
+     background-color: $orange;
+     svg g {
+       fill: #fff;
+     }
+   }
+ }
+ .select__redirect {
+   cursor: pointer;
+   display: block;
+   background-color: $blue;
+   max-width: 250px;
+   width: 100%;
+   color: #fff;
+   margin-bottom: 30px;
+   border-radius: 4px;
+ }
+ .select__redirect + .select__redirect {
+   margin-left: 50px;
+ }
+ .jq-selectbox__select-text {
+   width: 100% !important;
+   font-size: 16px;
+   text-transform: uppercase;
+   padding: 11px 15px;
+   position: relative;
+   &::before {
+     content: '';
+     position: absolute;
+     right: 15px;
+     width: 10px;
+     height: 15px;
+     background-image: url('../images/svg/arrow-filtr.svg');
+     background-repeat: no-repeat;
+     background-size: cover;
+     top: 10px;
+     fill: white;
+   }
+ }
+ 
+ .jq-selectbox__dropdown {
+   background-color: #fff;
+   color: $blue;
+   box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+   border-radius: 0 0 4px 4px;
+   text-align: center;
+   width: 100% !important;
+   left: 0;
+   top: 41px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+ }
+ .jq-select-multiple li,
+ .jq-selectbox li {
+   font-size: 16px;
+   padding-top: 5px;
+   padding-bottom: 5px;
+   margin-left: 15px;
+   text-align: left;
+   padding: 8px 10px;
+   &:hover {
+     background-color: $blue;
+     border-radius: 4px;
+     color: #fff;
+   }
+ }
