--- a/app/scss/_tv.scss
+++ b/app/scss/_tv.scss
@@ -10,8 +10,8 @@
    &__top {
      display: flex;
      justify-content: space-between;
-     align-items: flex-end;
      max-width: 1366px;
+     align-items: center;
    }
  }
  .tv-page__inner {
