--- a/app/scss/_hp-soupiska.scss
+++ b/app/scss/_hp-soupiska.scss
@@ -132,7 +132,7 @@
    display: inline-block;
    text-transform: uppercase;
    border-radius: 4px;
-   background-color: #F07E00;
+   background-color: $orange;
    padding: 6px 14px 6px 12px;
    font-style: normal;
    -webkit-font-kerning: normal;
