--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -257,7 +257,7 @@
    .header{
       margin-top: 0;
       border-top: 2px solid $orange;
-      border-bottom: 2px solid $orange;
+     
       &__inner{
          height: 60px;
       }
@@ -265,6 +265,7 @@
    .header__logo{
       width: 90px;
       height: 90px;
+      z-index: 9990000;
       top: 0;
       img{
          object-fit: cover;
@@ -275,7 +276,7 @@
     }
     .nav{
        border-top: none;
-       top: 59px;
+       top: 57px;
     }
  }
  @media(max-width:690px){
